--- a/ArvoreDeDecisoes/01.html
+++ b/ArvoreDeDecisoes/01.html
@@ -9,5 +9,5 @@
 <body>
     <h1>Atividade estágio DATAPREV</h1>
 </body>
-<script src="copia.js"></script>
+<script src="resolução02.js"></script>
 </html>
